# script-o-matic

./: .gitignore  README.md  abstract_art_generator.py  generate_color_palettes.py  lib.py  llm.py  pyproject.toml  scriptomatic.py
example-scripts/: daily_mandala_generator.py  emoji_art_generator.py  emoji_mandala_generator.py  emoji_mood_art_generator.py  emoji_story_generator.py  file_counter.py  global_time_zone_display.py  interactive_fantasy_story_generator.py  interactive_story_generator.py  kaleidoscope_art.py  planetary_system_simulator.py  secure_password_generator.py  stock_sentiment_analyzer.py  tip_calculator.py  weather_data_vision.py
src/: __init__.py  cli.py  lib.py  llm.py  scriptomatic.py
tests/: test_cli.py  test_llm.py  test_scriptomatic.py
