[tool.poetry]
name = "scriptomatic"
version = "0.1.0"
description = "A tool to generate custom Python scripts"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
anthropic = "^0.3.0"

[tool.poetry.scripts]
scriptomatic = "scriptomatic:main"
plz = "scriptomatic:plz"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"